<resources>
    <!--    navigation-->
    <string name="app_name">MyChronology</string>
    <string name="main_nav_weekReport">WeekReport</string>
    <string name="main_nav_home">Subjects</string>
    <string name="main_nav_Daily">Daily Check</string>>
    <string name="main_nav_chronology">Chronology</string>

    <!--    create subject dialog-->
    <string name="Dialog_cardTitle">Card Title</string>
    <string name="Dialog_min">Min Score</string>
    <string name="Dialog_max">Max Score</string>
    <string name="Dialog_description">Description(optional)</string>
    <string name="Dialog_weighing">Weighing(%)</string>
    <string name="Dialog_save">Save</string>
    <string name="Dialog_cancel">Cancel</string>
    <string name="Dialog_title">Create Subject</string>
    <!--    Update Subject Dialog-->
    <string name="Dialog_title_update">Update Subject</string>


    <!--    constraint-->
    <string name="wrapcontents">wrap_content</string>

    <!--    manageSubject fragment-->
    <string name="ManageSubjectTitle">Manage Subject</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <!--    Daily fragment-->
    <string name="DailyTitle">Daily Check</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>